--- a/index-v2.html
+++ b/index-v2.html
@@ -20,12 +20,12 @@
     <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down" data-aos-delay="100" data-aos-duration="400"
         data-aos-easing="ease-out">
         <div class="container">
-            <a class="navbar-brand" href="index-v2.html">
-                <img src="assets/images/logo.svg" alt="compette" />
+            <a class="navbar-brand" href="index.html">
+                <img src="assets/images/logo-v2.svg" alt="compette" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon" style="color: white;"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav mx-auto">
@@ -36,32 +36,33 @@
                     <a class="nav-link" href="#">About</a>
                 </div>
                 <form class="d-flex">
-                    <button class="btn btn-myAccount btn-v1" type="submit">My Account</button>
+                    <button class="btn btn-myAccount btn-v2" type="submit">My Account</button>
                 </form>
             </div>
         </div>
     </nav>
 
-    <section class="hero">
+    <section class="hero-v2">
         <div class="container">
-            <div class="hero-image d-flex justify-content-center d-lg-block d-none ">
-                <img src="assets/images/bg.png" alt="broperti" class="hero-background" style="margin-right: -120px;" />
+            <div class="hero-image d-lg-block d-none">
+                <img src="assets/images/bg-v2.png" alt="broperti" class="hero-background"
+                    style="margin-left: -120px;" />
             </div>
             <div class="row">
-                <div class="col-12">
+                <div class="col-12 text-center">
                     <h1>
                         Discover Your <br />
-                        Own Future Empire <br />
-                        Easy Cozy
+                        Own Future Empire
                     </h1>
                     <p>
-                        Saving much time by finding the match one <br />
+                        Saving much time by finding the match one <br class="d-none d-lg-block" />
                         using our algorithm that we designed
                     </p>
+                    <img src="assets/images/arrow.svg" alt="image" class="arrow-img d-lg-block d-none" />
                 </div>
 
-                <div class="col-lg-8 col-12">
-                    <div class="form-content">
+                <div class="col-12 d-flex justify-content-center">
+                    <div class="form-content-v2">
                         <form class="row g-3">
                             <div class="col-4">
                                 <label for="location" class="form-label label-text">Location</label>
