fix font size and form-layout

--- a/index-v2.html
+++ b/index-v2.html
@@ -25,7 +25,7 @@
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <img src="assets/images/hamburger-icon.svg" alt="compette" width="36" />
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav mx-auto">
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="#">Partner</a>
                     <a class="nav-link" href="#">About</a>
                 </div>
-                <form class="d-flex">
+                <form class="d-grid">
                     <button class="btn btn-myAccount btn-v2" type="submit">My Account</button>
                 </form>
             </div>
@@ -64,20 +64,22 @@
                 <div class="col-12 d-flex justify-content-center">
                     <div class="form-content-v2">
                         <form class="row g-3">
-                            <div class="col-4">
+                            <div class="col-lg-4 col-12">
                                 <label for="location" class="form-label label-text">Location</label>
                                 <input type="text" class="form-control" id="location" placeholder="Location"
                                     value="Sulawesi Utara" />
                             </div>
-                            <div class="col-4">
+                            <div class="col-lg-4 col-12">
                                 <label for="type" class="form-label label-text">Type</label>
                                 <input type="text" class="form-control" id="type" placeholder="Type"
                                     value="Apartment" />
                             </div>
-                            <div class="col-4 d-flex justify-content-center">
-                                <button type="submit" class="btn btn-exploreNow">
-                                    Explore Now
-                                </button>
+                            <div class="col-lg-4 col-12">
+                                <div class="d-grid">
+                                    <button type="submit" class="btn btn-exploreNow">
+                                        Explore Now
+                                    </button>
+                                </div>
                             </div>
                         </form>
                     </div>
