--- a/index.html
+++ b/index.html
@@ -16,18 +16,13 @@
 </head>
 
 <body>
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-light" data-aos="fade-down" data-aos-delay="100" data-aos-duration="400"
-        data-aos-easing="ease-out">
+    <!-- NAVBAR TYPE 1 -->
+    <nav class="navbar navbar-expand-lg navbar-light visually-hidden" data-aos="fade-down" data-aos-delay="100"
+        data-aos-duration="400" data-aos-easing="ease-out">
         <div class="container">
             <a class="navbar-brand" href="index-v2.html">
                 <img src="assets/images/logo.svg" alt="compette" />
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <img src="assets/images/hamburger-icon.svg" alt="compette" width="36" />
-                <!-- <span class="navbar-toggler-icon"></span> -->
-            </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav mx-auto">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -40,12 +35,88 @@
                     <button class="btn btn-myAccount btn-v1" type="submit">My Account</button>
                 </form>
             </div>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <img src="assets/images/hamburger-icon.svg" alt="compette" width="36" />
+                <!-- <span class="navbar-toggler-icon"></span> -->
+            </button>
+        </div>
+    </nav>
+
+    <!-- NAVBAR TYPE 2 -->
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="index-v2.html">
+                <img src="assets/images/logo.svg" alt="broperti" />
+            </a>
+
+            <!-- START: NAVBAR ON LARGE-SCREEN -->
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo">
+                <div class="navbar-nav mx-auto">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link" href="#">Featured</a>
+                    <a class="nav-link" href="#">Stories</a>
+                    <a class="nav-link" href="#">Partner</a>
+                    <a class="nav-link" href="#">About</a>
+                </div>
+                <div class="gap-3">
+                    <!-- <button class="btn btn-myAccount btn-v1" type="submit">My Account</button> -->
+                    <button class="btn btn-default btn-no-fill">Log In</button>
+                    <button class="btn btn-fill text-white border-0">Try Now</button>
+                </div>
+            </div>
+            <!-- END: NAVBAR ON LARGE-SCREEN -->
+
+            <!-- <button class="navbar-toggler border-0" type="button" data-bs-toggle="modal"
+                data-bs-target="#targetModal-item">
+                <span class="navbar-toggler-icon"></span>
+            </button> -->
+            <button class="navbar-toggler border-0" type="button" data-bs-toggle="modal"
+                data-bs-target="#targetModal-item">
+                <img src="assets/images/hamburger-icon.svg" alt="broperti" width="36" />
+            </button>
+
+            <!-- START: MODAL SHOW ON MOBILE -->
+            <div class="modal-item modal fade" id="targetModal-item" tabindex="-1" role="dialog"
+                aria-labelledby="targetModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content border-0" style="background-color: #141432;">
+                        <div class="modal-header border-0" style="padding:	2rem; padding-bottom: 0;">
+                            <a class="modal-title" id="targetModalLabel">
+                                <img src="assets/images/logo.svg" alt="broperti" />
+                            </a>
+                            <button type="button" class="close btn-close text-white" data-bs-dismiss="modal"
+                                aria-label="Close">
+                            </button>
+                        </div>
+                        <div class="modal-body" style="padding:	2rem; padding-top: 0.75; padding-bottom: 0;">
+                            <ul class="navbar-nav responsive me-auto mt-2 mt-lg-0">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link" href="#">Featured</a>
+                                <a class="nav-link" href="#">Stories</a>
+                                <a class="nav-link" href="#">Partner</a>
+                                <a class="nav-link" href="#">About</a>
+                            </ul>
+                        </div>
+                        <div class="modal-footer border-0 gap-3" style="padding: 2rem; padding-top: 0.75rem">
+                            <!-- <button class="btn btn-myAccount btn-v1 w-100" type="submit">My Account</button> -->
+                            <div class="gap-3">
+                                <button class="btn btn-default btn-no-fill">Log In</button>
+                                <button class="btn btn-fill text-white border-0">Try Now</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- END: MODAL SHOW ON MOBILE -->
+
         </div>
     </nav>
 
     <section class="hero">
         <div class="container">
-            <div class="hero-image d-flex justify-content-center d-lg-block d-none ">
+            <div class="hero-image d-flex justify-content-center d-lg-block d-none">
                 <img src="assets/images/bg.png" alt="broperti" class="hero-background" style="margin-right: -120px;" />
             </div>
             <div class="row">
